Fix search field bug on firefox

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -399,7 +399,6 @@ ol.navigation
   border-bottom: 1px solid #aaa
   font-size: 1.2em
   color: #333
-  padding: 1.2em .4em !important
   height: 40px
   margin: 0
 #searchTextField:focus
